--- a/src/assets/styles/pages/_giphyApp.scss
+++ b/src/assets/styles/pages/_giphyApp.scss
@@ -1,13 +1,22 @@
 .app-container{
 min-height: 75vh;
-    .loading{
-        width: 300px;
+.loading-container{
+    background-color: transparent;
+    
+    height: 580px;
+    position: relative;
+
+      .loading{
+          margin-top: 20px;
+        width: 1000px;
         position: relative;
         right: 50%;
         left: 50%;
-        padding: 10px;
+        
         transform: translate(-50%);
     }
+}
+  
   
 }
 .search-input{
